# Animation-Retrieval

./: .env.example  .gitignore  LICENSE  README.md  README_episode.md  README_segment.md  README_series.md  monitor_progress.sh  pyproject.toml
labeling/: README.md  delete.py  episode_processor.py  main.py  segment_processor.py  series_processor.py  test.py  update_metadata.py
metadata/: episode_metadata.jsonl  segment_metadata.jsonl  series_metadata.jsonl
